--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
                                 </div>
                             </div> 
                             <div class="feedback-name">
-                                <div class="name-1">Abhishek Ghosh</div>
+                                <div class="name-1">Mustafa Zaheer</div>
                                 <div class="profile-1">Agreed! +1</div>
                                 <div class="name-1">Shabnoor Ashrafi Parveen</div>
                                 <div class="profile-1">You've got that right!!</div>
