--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
                         <div class="inside-circle">
                             <div class="circle">A</div>
                             <div class="discription-heading">
-                                <div class="discription">Abhishek Ghosh</div>
+                                <div class="discription">Mustafa Zaheer</div>
                                 <div class="sub-discription">Project Owner</div>
                             </div>
                         </div>
@@ -138,7 +138,7 @@
                                 </div>
                             </div> 
                             <div class="feedback-name">
-                                <div class="name-1">Mustafa Zaheer</div>
+                                <div class="name-1">Abhishek Ghosh</div>
                                 <div class="profile-1">Agreed! +1</div>
                                 <div class="name-1">Shabnoor Ashrafi Parveen</div>
                                 <div class="profile-1">You've got that right!!</div>
